day04/dov-bear-sts.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dov-ns
  labels:
    app: dov-bear

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dov-ns
  labels:
    app: dov-bear
spec:
  clusterIP: None
  selector:
    name: dov-po
    app: dov-bear
  ports:
  - port: 80
    targetPort: 3000

---
apiVerison: apps/v1
kind: StatefulSet
metadata:
  name: dov-sts
  namepsace: dov-ns
  labels:
    app: dov
    name: dov-sts
spec:
  serviceName: dov-hsvc
  replicas: 4
  selector:
    matchLabels:
      name: dov-po
      app: dov-bear
  template:
    apiVersion: apps/v1
    kind: Deployment
    metadata:
      name: dov-deploy
      namespace: dov-ns
      labels:
        app: dov-bear
    spec:
      replicas: 3
      selector:
        matchLabels:
          name: dov-po
          app: dov-bear
      template:
        metadata:
          name: dov-po
          labels:
            name: dov-po
            app: dov-bear
        spec:
          containers:
          - name: my-container
            image: chukmunnlee/dov-bear:v4
            imagePullPolicy: IfNotPresent
            ports:
            - containerPort: 3000
            livenessProbe:
              httpGet:
                path: /healthz
                port: 3000
            resources:
              requests:
                cpu: 64m
                memory: 128Mi
              limits:
                cpu: 64m
                memory: 128Mi
