day04/dov-bear.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dov-ns
  labels:
    app: dov-bear

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: dov-ns
  labels:
    app: dov-bear
spec:
  replicas: 3
  selector:
    matchLabels:
      name: dov-po
      app: dov-bear
  template:
    metadata:
      name: dov-po
      labels:
        name: dov-po
        app: dov-bear
    spec:
      containers:
      - name: my-container
        image: chukmunnlee/dov-bear:v4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
        resources:
          requests:
            cpu: 64m
            memory: 128Mi
          limits:
            cpu: 64m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dov-ns
  labels:
    app: dov-bear
spec:
  type: ClusterIP
  selector:
    name: dov-po
    app: dov-bear
  ports:
  - port: 80
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata: 
  name: dov-hsvc
  namespace: dov-ns
  labels:
    app: dov
    name: dov-hsvc
spec:
  clusterIP: None
  selector:
    name: dov-po
    app: dov-bear
  ports:
  - port: 8080
    targetPort: 3000
