day04/mysql.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: db-ns

---
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: db-ns
spec:
  clusterIP: None
  selector:
    app: db
    name: db-po
  ports:
  - port: 3306
    targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: db-ns
  labels:
    app: db
    name: db-sts
spec:
  serviceName: db-hsvc
  replicas: 1
  selector:
    matchLabels:
      app: db
      name: db-po
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: db-pvc
      labels:
        app: db-hsvc
        name: db-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      name: db-po
      labels:
        app: db
        name: db-po
    spec:
      containers:
      - name: db-container
        image: mysql:8.0
        imagePullPolicy: IfNotPResent
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: db-pvc
            mountPath: /var/lib/mysql
