day04/policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: bggns
  labels:
    app: bgg
    name: deny-all
spec:
  podSelector:
    matchLabels:
      app: bgg
      name: bgg-po
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access
  namespace: bggns
  labels:
    app: bgg
    name: allow-access
spec:
  podSelector:
    matchLabels:
      app: bgg
      name: bgg-po
  policyTypes:
    - Ingress
      ingress:
        from:
